# LOOCV-LROCV

./: .gitignore  .pre-commit-config.yaml  LOOCV_LROCV.ipynb  README.md  pyproject.toml  requirements-dev.txt  water_data.csv  water_data.xlsx
.github/workflows/: ci.yml  release.yml  tag-version-check.yml
loocv_lrocv/: __init__.py  metrics.py
tests/: test_basic.py
