[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "loocv-lrocv"
version = "0.1.4"
description = "LOOCV/LROCV utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["loocv_lrocv"]
